# edyn

./: .clang-format  .editorconfig  .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: conan.yml
cmake/: Edyn-config.cmake
cmake/in/: build_settings.h.in
docs/: Design.md
examples/: CMakeLists.txt
examples/current_pos/: current_pos.cpp
examples/hello_world/: hello_world.cpp
examples/hello_world_mt/: hello_world_mt.cpp
extras/: CMakeLists.txt
extras/include/edyn/: time.hpp
extras/src/unix/: time.cpp
include/edyn/: comp.hpp  edyn.hpp  init.hpp
include/edyn/collision/: broadphase.hpp  broadphase_main.hpp  broadphase_worker.hpp  collide.hpp  collision_algorithm.hpp  collision_feature.hpp  collision_result.hpp  contact_event_emitter.hpp  contact_manifold.hpp  contact_manifold_events.hpp  contact_manifold_map.hpp  contact_normal_attachment.hpp  contact_point.hpp  contact_signal.hpp  dynamic_tree.hpp  narrowphase.hpp  query_aabb.hpp  query_tree.hpp  raycast.hpp  raycast_service.hpp  shape_feature.hpp  should_collide.hpp  simple_broadphase.hpp  static_tree.hpp  tree_node.hpp  tree_view.hpp
include/edyn/comp/: aabb.hpp  aabb_override.hpp  action_list.hpp  angvel.hpp  center_of_mass.hpp  child_list.hpp  collision_exclusion.hpp  collision_filter.hpp  con_row_iter_data.hpp  constraint.hpp  constraint_color.hpp  constraint_group.hpp  constraint_row.hpp  constraint_row_iteration_data.hpp  contact_manifold.hpp  continuous.hpp  current_position.hpp  delta_angvel.hpp  delta_linvel.hpp  dirty.hpp  edge_color.hpp  graph_edge.hpp  graph_node.hpp  gravity.hpp  inertia.hpp  island.hpp  linacc.hpp  linvel.hpp  mass.hpp  material.hpp  matter.hpp  merge_component.hpp  orientation.hpp  origin.hpp  position.hpp  present_orientation.hpp  present_position.hpp  relation.hpp  role.hpp  roll_direction.hpp  (+15 more)
include/edyn/config/: config.h  constants.hpp  execution_mode.hpp  solver_iteration_config.hpp
include/edyn/constraints/: antiroll_constraint.hpp  cone_constraint.hpp  constraint.hpp  constraint_base.hpp  constraint_body.hpp  constraint_impulse.hpp  constraint_row.hpp  constraint_row_friction.hpp  constraint_row_options.hpp  constraint_row_positional.hpp  constraint_row_spin.hpp  constraint_row_spin_friction.hpp  constraint_row_triple.hpp  constraint_row_with_spin.hpp  contact_constraint.hpp  contact_extras_constraint.hpp  contact_patch_constraint.hpp  contact_patch_spring_constraint.hpp  cvjoint_constraint.hpp  differential_constraint.hpp  distance.hpp  distance_constraint.hpp  doublewishbone_constraint.hpp  friction_constraint.hpp  generic_constraint.hpp  gravity_constraint.hpp  hinge_constraint.hpp  null_constraint.hpp  point_constraint.hpp  prepare_constraints.hpp  soft_distance_constraint.hpp  spin_angle_constraint.hpp  spin_constraint.hpp  springdamper_constraint.hpp  tierod_constraint.hpp  tire_contact_constraint.hpp  tirecarcass_constraint.hpp  triple_spin_constraint.hpp
include/edyn/context/: async_settings.hpp  external_system.hpp  profile.hpp  profile_macros.hpp  registry_operation_context.hpp  settings.hpp  start_thread.hpp  step_callback.hpp  task.hpp  task_util.hpp
include/edyn/core/: entity_graph.hpp  entity_pair.hpp  flat_nested_array.hpp  free_list.hpp  unordered_pair.hpp
include/edyn/dynamics/: constraint_colors.hpp  island_constraint_entities.hpp  island_solver.hpp  island_util.hpp  material_mixing.hpp  moment_of_inertia.hpp  position_solver.hpp  restitution_solver.hpp  row_cache.hpp  solver.hpp  solver_stage.hpp  world.hpp
include/edyn/math/: constants.hpp  coordinate_axis.hpp  geom.hpp  linear_curve.hpp  math.hpp  matrix3x3.hpp  pwl_curve.hpp  quaternion.hpp  scalar.hpp  shape_volume.hpp  transform.hpp  triangle.hpp  vector2.hpp  vector2_3_util.hpp  vector3.hpp
include/edyn/networking/: aabb_of_interest.hpp  client_import_pool.hpp  client_networking_context.hpp  client_side.hpp  entity_owner.hpp  extrapolation_component_pool.hpp  extrapolation_input.hpp  extrapolation_job.hpp  extrapolation_result.hpp  networked_comp.hpp  networking.hpp  networking_external.hpp  remote_client.hpp  server_import_pool.hpp  server_networking_context.hpp  server_side.hpp
include/edyn/parallel/: atomic_counter.hpp  atomic_counter_sync.hpp  broadphase_worker.hpp  buffer_sync.hpp  component_index_source.hpp  contact_event.hpp  delta_component_map.hpp  entity_component_container.hpp  entity_component_map.hpp  entity_graph.hpp  external_system.hpp  graph.hpp  import_child_entity.hpp  island_coordinator.hpp  island_delta.hpp  island_delta_builder.hpp  island_manager.hpp  island_topology.hpp  island_worker.hpp  island_worker_context.hpp  job.hpp  job_dispatcher.hpp  job_queue.hpp  job_queue_scheduler.hpp  job_scheduler.hpp  job_thief.hpp  make_island_delta_builder.hpp  map_child_entity.hpp  message.hpp  message_dispatcher.hpp  message_queue.hpp  (+15 more)
src/edyn/: edyn.cpp  init.cpp
test/: CMakeLists.txt
test/edyn/collision/: test_broadphase.cpp  test_collision.cpp  test_exclusion.cpp  test_raycast.cpp
test/edyn/common/: common.hpp
test/edyn/comp/: position.cpp
test/edyn/core/: test_entity_graph.cpp
test/edyn/issues/: issue128.cpp  issue134.cpp  issue76.cpp
test/edyn/math/: test_geom.cpp  test_math.cpp  test_matrix3x3.cpp  test_vector3.cpp  vector3.cpp
test/edyn/networking/: test_comp_state_history.cpp  test_input_state_history.cpp  test_net_imp_exp.cpp  test_packets.cpp
test/edyn/parallel/: test_entity_graph.cpp  test_island_delta.cpp  test_job_dispatcher.cpp  test_message_queue.cpp  test_registry_delta.cpp  test_registry_snapshot.cpp
test/edyn/serialization/: test_registry_s11n.cpp  test_std_s11n.cpp  test_triangle_mesh_s11n.cpp
test/edyn/shapes/: test_centroid.cpp  test_paged_trimesh.cpp  test_set_shape.cpp  test_shape_volume.cpp  test_trimesh.cpp
test/edyn/sys/: integrate_linacc.cpp  integrate_linvel.cpp  test_apply_gravity.cpp
test/edyn/util/: test_change_rigidbody_kind.cpp  test_clear_rigidbody.cpp  test_registry_operation.cpp  test_tuple_util.cpp
test_package/: CMakeLists.txt  conanfile.py
(+505 files in other folders)
