include_directories($<TARGET_PROPERTY:Edyn,INCLUDE_DIRECTORIES>)
add_compile_options($<TARGET_PROPERTY:Edyn,COMPILE_OPTIONS>)

macro(SETUP_AND_ADD_TEST TEST_NAME TEST_SOURCE)
    add_executable(${TEST_NAME} ${TEST_SOURCE})
    target_link_libraries(${TEST_NAME} PRIVATE Edyn GTest::Main)
    set_property(TARGET ${TEST_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/test)
    gtest_discover_tests(${TEST_NAME})
endmacro()

SETUP_AND_ADD_TEST(vector3 edyn/math/test_vector3.cpp)
SETUP_AND_ADD_TEST(triangle_mesh_serialization edyn/serialization/test_triangle_mesh_s11n.cpp)
SETUP_AND_ADD_TEST(integrate_linvel edyn/sys/integrate_linvel.cpp)
SETUP_AND_ADD_TEST(integrate_linacc edyn/sys/integrate_linacc.cpp)
SETUP_AND_ADD_TEST(job_dispatcher edyn/parallel/test_job_dispatcher.cpp)
SETUP_AND_ADD_TEST(message_queue edyn/parallel/test_message_queue.cpp)
SETUP_AND_ADD_TEST(entity_graph edyn/parallel/test_entity_graph.cpp)
SETUP_AND_ADD_TEST(std_serialization edyn/serialization/test_std_s11n.cpp)
SETUP_AND_ADD_TEST(island_delta edyn/parallel/test_island_delta.cpp)
SETUP_AND_ADD_TEST(geom edyn/math/test_geom.cpp)
SETUP_AND_ADD_TEST(collision edyn/collision/test_collision.cpp)
SETUP_AND_ADD_TEST(shape_volume edyn/shapes/test_shape_volume.cpp)
